# listdump

./: .gitignore  CHANGELOG.md  LICENCE  README.md  pyproject.toml
listdump/: __init__.py  __main__.py  list_files.py
