[project]
name = "listdump"
description = "List relevant files with content in markdown format"
authors = [{name = "Tim Abdiukov", email = "TAbdiukov@gmail.com"}]
dependencies = ["pathspec"]
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
license-files = ["LICENCE"]
keywords = [
  "cli",
  "command-line",
  "listing",
  "markdown",
  "documentation",
  "recursive",
]
classifiers = [
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Topic :: Software Development :: Documentation",
  "Topic :: System :: Filesystems",
  "Topic :: Utilities",
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
]

[project.scripts]
listdump = "listdump.list_files:main"

[project.urls]
Homepage = "https://github.com/TAbdiukov/listdump"
Source = "https://github.com/TAbdiukov/listdump"
Issues = "https://github.com/TAbdiukov/listdump/issues"
Documentation = "https://github.com/TAbdiukov/listdump/blob/main/README.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "listdump.__version__" }
